--- a/style.scss
+++ b/style.scss
@@ -454,43 +454,45 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
         max-width: 1050px;
         margin: 0 auto;
         .request{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
             margin: 40px auto;
-            .request-text{
-                & h3{
-                    font-family: "Martel";
-                    font-weight: 700;
-                    font-size: 24px;
-                    line-height: 32px;
-                    letter-spacing: 0.1px;
-                    color: #252B42;
-                }
-                & p {
-                    font-family: "Open Sans";
-                    font-weight: 400;
-                    font-size: 14px;
-                    line-height: 20px;
-                    letter-spacing: 0.2px;
-                    color: #737373;
-                }
-            }
-            .request-btn{
+            .request-inner{
                 display: flex;
                 align-items: center;
-                padding: 15px 40px;
-                margin-right: 180px;
-                width: 158px;
-                height: 58px;
-                background: #784F33;
-                border-radius: 5px;
-                font-family: "Open Sans";
-                font-weight: 700;
-                font-size: 14px;
-                line-height: 28px;
-                letter-spacing: 0.2px;
-                color: #FFFFFF;
+                justify-content: space-between;
+                .request-text{
+                    & h3{
+                        font-family: "Martel";
+                        font-weight: 700;
+                        font-size: 24px;
+                        line-height: 32px;
+                        letter-spacing: 0.1px;
+                        color: #252B42;
+                    }
+                    & p {
+                        font-family: "Open Sans";
+                        font-weight: 400;
+                        font-size: 14px;
+                        line-height: 20px;
+                        letter-spacing: 0.2px;
+                        color: #737373;
+                    }
+                }
+                .request-btn{
+                    display: flex;
+                    align-items: center;
+                    padding: 15px 40px;
+                    margin-right: 180px;
+                    width: 158px;
+                    height: 58px;
+                    background: #784F33;
+                    border-radius: 5px;
+                    font-family: "Open Sans";
+                    font-weight: 700;
+                    font-size: 14px;
+                    line-height: 28px;
+                    letter-spacing: 0.2px;
+                    color: #FFFFFF;
+                }
             }
         }
     }
