--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ h1, h2, h3, h4, h5, h6 {
 .intro {
 	width: 100%;
 	height: 785px;
-	background: url("/Source/cover.jpg") no-repeat;
+	background: url("Source/cover.jpg") no-repeat;
 	background-size: cover;
 	display: -webkit-box;
 	display: -ms-flexbox;
