--- a/style.scss
+++ b/style.scss
@@ -59,7 +59,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 .intro{
     width: 100%;
     height: 785px;
-    background: url("/Source/cover.jpg") no-repeat;
+    background: url("Source/cover.jpg") no-repeat;
     background-size: cover;
     display: flex;
     .intro-inner{
